--- a/home/templates/anasayfayazi.html
+++ b/home/templates/anasayfayazi.html
@@ -19,8 +19,7 @@
                 <i class="fa fa-check"></i>Exercise is physical activity that is planned, structured, and repetitive for the purpose of conditioning the body.<br><br>
                 <i class="fa fa-check"></i>Exercise is essential for improving overall health, maintaining fitness, and helping to prevent the development of obesity , hypertension , and cardiovascular disease<br><br>
                 <i class="fa fa-check"></i>Exercises By Muscle Group<br><br>
-                <i class="fa fa-check"></i>Find exercises that work out the muscle groups you're targeting.<br><br>
-                <i class="fa fa-check"></i>400+ exercises with instructions<br>
+                <i class="fa fa-check"></i>Find exercises that work out the muscle groups you're targeting.
             </ul>
         <a href="/exercises" class="link-button mt-2" style="margin-left:30px;">Views</a>
 
@@ -38,11 +37,10 @@
 			</div>
             <div class="geegg">
             <ul>
-            <i class="fa fa-check"></i>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.<br><br>
-            <i class="fa fa-check"></i>Until recently, the prevailing view assumed lorem ipsum was born as a nonsense text.<br><br>
+            <i class="fa fa-check"></i>is dummy text used in laying out print, graphic or web designs.<br><br>
+            <i class="fa fa-check"></i>Until recently, the prevailing view assumed<br><br>
             <i class="fa fa-check"></i>“It's not Latin, though it looks like it, and it actually says nothing,”<br><br>
-            <i class="fa fa-check"></i>As Cicero would put it, “Um, not so fast.”<br><br>
-            <i class="fa fa-check"></i>Lorem ipsum is so ubiquitous because it is so versatile.<br>
+            <i class="fa fa-check"></i>As Cicero would put it, “Um, not so fast.”
             
             </ul>
                 <a href="/planner" class="link-button mt-2" style="margin-left:30px;" >Views</a>
@@ -77,8 +75,7 @@
                 <i class="fa fa-check"></i>Questions about the body<br><br>
                 <i class="fa fa-check"></i>Questions about the body<br><br>
                 <i class="fa fa-check"></i>Questions about the body<br><br>
-                <i class="fa fa-check"></i>Questions about the body<br><br>
-                <i class="fa fa-check"></i>Questions about the body<br>
+                <i class="fa fa-check"></i>Questions about the body
 
             </ul>
         <a href="/questionanswer" class="link-button mt-2" style="margin-left:30px;">Views</a>
