--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  <title>Body Challenge</title>
+  {% comment %} <title>Body Challenge</title> {% endcomment %}
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light py-3 border-bottom">
       <div class="container">
         <div class="navbar-brand">
-          <img src="static/image/bodyiconiki.jpg" width="35" height="35">
+          <img src="https://raw.githubusercontent.com/batu1509/bodychallenge/master/static/image/bodyiconiki.jpg?token=GHSAT0AAAAAABZBFUDLGLI2CUGA3SRIEBDGY3I3MHA" width="35" height="35">
           BODY CHALLENGE
         </div>
         <button class="navbar-toggler d-flex d-md-none flex-column justify-content-around collapsed" type="button"
@@ -101,16 +101,10 @@
             aria-label="Contact Us"><i class="far fa-comment"></i></a><br>
 
           <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
+            role="button" target="_blank" aria-label=""><i
               class="fab fa-linkedin"></i></a>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
-              class="fab fa-instagram"></i></a>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
-              class="fab fa-twitter"></i></a>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/batu1509/bodychallenge"
+            role="button" target="_blank" aria-label=""><i
               class="fab fa-github"></i></a>
         </div>
       </div>
