--- a/static/css/style.css
+++ b/static/css/style.css
@@ -351,29 +351,48 @@ text-align: center;
 
 /* Exercises filter */
 .filter-exercises label {
-  font-size: 1.1rem;
+  display: block;
+	padding: 4px 15px;
+	font-weight: bold;
+	border-radius: 30px;
+	color: #fff;
+	background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #030303), color-stop(100%, #2315a2));
 }
 
 .filter-exercises p {
   display: inline-block;
+	padding: 4px 15px;
+  background-color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.87);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 4px;
+  box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
+
+  
 }
 
 .filter-exercises select, .filter-exercises input {
   border: 1px solid var(--special);
   padding: 0.5rem;
   margin: 0 0.5rem;
+  box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
 }
 
 .filter-exercises select {
   padding: 0.5rem;
+  cursor: pointer;
+  appearance: auto;
+  
+
 }
 
 .filter-exercises input {
-  padding: 0.20rem;
+  padding: 0.40rem;
+
 }
 
 .filter-exercises input:focus {
-  background-color: gray
+  background-color: var(--background)
 }
 
 /* Exercise image in exercise detail page */
