--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-<div class="container">
-  <div class="row d-flex justify-content-center mb-5">
-    <div class="col-12 col-md-8 col-lg-4">
+<div class="container" >
+  <div class="row d-flex justify-content-center mb-5" style="padding:30px;">
+    <div class="col-12 col-md-8 col-lg-4" >
       <div class="card rounded-3 text-black">
         <div class="row g-0">
           <div class="col-lg-12">
