--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -31,8 +31,8 @@
                 <small class="fa fa-check"> <span style="color:blue">Height : </span>{{user.profil.height}}</small>
             </div>
             
-            <div class="text-center">
-                <a href=""  class="link-button mt-3">Update profile</a>
+            <div class="text-center mb-5">
+                <a href="{% url 'updateprofile' %}"  class="link-button mt-3">Update profile</a>
             </div>
         </div>
     </div> 
