--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 
+
 }
 
 
@@ -145,6 +146,16 @@ body {
   margin-left: 30px;
   padding-left: 10%;
   font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.updateprofil {
+  margin-left: 550px;
+  padding-right: 10%;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-bottom: 10rem; /*  */
+  height: 1000px;
+  
+}
 
 }
 .fa-check {
@@ -408,7 +419,7 @@ table, table input {
 
 table input {
   border-bottom: 2px solid var(--special);
-  padding-bottom: 0.5rem !important;
+  padding-bottom: 0.6rem !important;
   width: 100%;
 }
 
@@ -429,12 +440,11 @@ table label {
 }
 
 
-/* Remove the bottom line from the table */
+
 .no-line {
   border-style: none !important;
 }
 
-/* Add padding to middle line separating AM & PM */
 .separation-line {
   padding-bottom: 2rem !important;
 }
@@ -447,7 +457,6 @@ thead th:first-of-type {
   visibility: hidden;
 }
 
-/* Edit, add & delete plan option buttons */
 .plan-buttons {
   display: inline;
   background-color: var(--special);
@@ -463,7 +472,6 @@ thead th:first-of-type {
   box-shadow: none;
 }
 
-/* Workout planner pages navigation arrows */
 .arrows {
   display: inline-block;
   line-height: 0;
@@ -495,6 +503,8 @@ hr {
   font-size: 1.15rem;
   margin-left: 10%
 }
+
+
 
 .page-link {
   color: var(--blue) !important;
@@ -541,9 +551,12 @@ hr {
 /* Footer */
 footer {
   color: grey;
-  margin: 20px auto 0;
-  max-width: 280px;
-  padding: 0 4%;
+  margin: -60px auto 0;
+  max-width: 200px;
+  padding: 3 4%;
+           
+
+
 }
 
 .copyright {
@@ -565,6 +578,7 @@ footer {
   padding-bottom: 10rem; /*  */
   margin-top: 3rem;
 }
+
 
 @media all and (max-width: 502px) {
   /* Style filter buttons */
