--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container text-center">
+<div class="work container text-center">
     {% if message_name %}
         <h2>Thank you {{ message_name }}!</h2>
         <h5>Your message has been sent.</h5>
@@ -48,7 +48,7 @@
                                         <label for="message" class="sr-only">Your message</label>
                                         <textarea name="message" id="message" class="form-control" rows="7" placeholder="Your message" required></textarea>
                                     </div>
-                                    <div class="col-12 text-center pt-3">
+                                    <div class="worki col-12 text-center pt-3">
                                         <button type="submit" class="button">Send message <i class="fa-solid fa-envelope"></i></button>
                                     </div>
                                 </div>
