--- a/questionanswer/templates/all_questions.html
+++ b/questionanswer/templates/all_questions.html
@@ -40,7 +40,7 @@
     {% endfor %}
   </div>
 
-  <div class="pagination_buttons_container">
+  <div class="quest pagination_buttons_container">
     <!-- First and Previous page button-->
     {% if page_obj.has_previous %}
       <a class="pagination_button" href="?page=1">First</a>
