--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -3,10 +3,14 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/jpg" href="{% static 'image/bodyiconikii.png' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  {% comment %} <title>Body Challenge</title> {% endcomment %}
+  <title>Body Challenge</title>
+  
 </head>
 <body>
 
@@ -15,7 +19,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light py-3 border-bottom">
       <div class="container">
         <div class="navbar-brand">
-          <img src="https://raw.githubusercontent.com/batu1509/bodychallenge/master/static/image/bodyiconiki.jpg?token=GHSAT0AAAAAABZBFUDLGLI2CUGA3SRIEBDGY3I3MHA" width="35" height="35">
+          <img src="{% static "image/bodyiconikii.png" %}" style="width: 30px; height: 30px">
           BODY CHALLENGE
         </div>
         <button class="navbar-toggler d-flex d-md-none flex-column justify-content-around collapsed" type="button"
@@ -34,7 +38,7 @@
               <a class="nav-link" href="/questionanswer">Body Questions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/planner">Workout</a>
+              <a class="nav-link" href="/workouts">Workout</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/exercises">All Exercises</a>
@@ -49,9 +53,17 @@
                 {{user.username}}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'profile' user.username%}">Profile</a></li>
-                <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
-
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url 'profile' user.username%}">
+                  <i class="fa fa-user" aria-hidden="true"></i>
+                  <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Profil">Profile</p>
+                </a></li>
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url "account_logout" %}">
+                    <i class="fa fa-sign-out me-1"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Logout">Logout</p>
+                  </a>
+                </li>
               </ul>
             </li>
 
@@ -63,9 +75,17 @@
                 Sign in / Sign up
               </a>
               <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'account_signup' %}">Sign up</a></li>
-                <li><a class="dropdown-item" href="{% url 'account_login' %}">Sign in</a></li>
-              </ul>
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url "account_login" %}">
+                    <i class="fa fa-sign-in"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Login">Login</p>
+                  </a>
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url "account_signup" %}">
+                    <i class="fa fa-registered"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register">Register</p>
+                  </a>
+                </li>              </ul>
             </li>
 
             {% endif %}
@@ -100,7 +120,7 @@
           <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="{% url 'contact' %}" role="button"
             aria-label="Contact Us"><i class="far fa-comment"></i></a><br>
 
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/batuhan-ek%C5%9Fi-65a531256/"
             role="button" target="_blank" aria-label=""><i
               class="fab fa-linkedin"></i></a>
           <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/batu1509/bodychallenge"
