--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -58,7 +58,7 @@
 </section>
 
 
-<section class="home">
+<section class="last">
     <div class="container">
     <div class="row">
         <div class="col-md">
