--- a/programs/templates/exercises_list.html
+++ b/programs/templates/exercises_list.html
@@ -25,7 +25,7 @@
     </div>
 </section>
 
-    <div class="card py-5 bg-light">
+    <div class="exerc card py-5 bg-light">
         <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
             
