--- a/questionanswer/templates/questionanswer.html
+++ b/questionanswer/templates/questionanswer.html
@@ -4,14 +4,16 @@
 <html lang="en">
 
 <head>
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/jpg" href="{% static 'image/bodyiconikii.png' %}">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  
 
   {% block stylesheets %}
   {% endblock stylesheets %}
@@ -25,7 +27,7 @@
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light py-3 border-bottom">
       <div class="container">
         <div class="navbar-brand">
-          <img src="static/image/bodyiconiki.jpg" width="35" height="35">
+          <img src="{% static "image/bodyiconikii.png" %}" style="width: 30px; height: 30px">
           BODY CHALLENGE
         </div>
         <button class="navbar-toggler d-flex d-md-none flex-column justify-content-around collapsed" type="button"
@@ -44,7 +46,7 @@
               <a class="nav-link" href="/questionanswer">Body Questions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/planner">Workout</a>
+              <a class="nav-link" href="/workouts">Workout</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/exercises">All Exercises</a>
@@ -59,9 +61,17 @@
                 {{user.username }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'profile' user.username%}">Profile</a></li>
-                <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
-
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url 'profile' user.username%}">
+                  <i class="fa fa-user" aria-hidden="true"></i>
+                  <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Profil">Profile</p>
+                </a></li>
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url "account_logout" %}">
+                    <i class="fa fa-sign-out me-1"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Logout">Logout</p>
+                  </a>
+                </li>
               </ul>
             </li>
 
@@ -73,9 +83,17 @@
                 Sign in / Sign up
               </a>
               <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url 'account_signup' %}">Sign up</a></li>
-                <li><a class="dropdown-item" href="{% url 'account_login' %}">Sign in</a></li>
-              </ul>
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url "account_login" %}">
+                    <i class="fa fa-sign-in"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Login">Login</p>
+                  </a>
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-0" href="{% url "account_signup" %}">
+                    <i class="fa fa-registered"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register">Register</p>
+                  </a>
+                </li>              </ul>
             </li>
 
             {% endif %}
@@ -109,17 +127,11 @@
           <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="{% url 'contact' %}" role="button"
             aria-label="Contact Us"><i class="far fa-comment"></i></a><br>
 
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/batuhan-ek%C5%9Fi-65a531256/"
+            role="button" target="_blank" aria-label=""><i
               class="fab fa-linkedin"></i></a>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
-              class="fab fa-instagram"></i></a>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
-              class="fab fa-twitter"></i></a>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href=""
-            role="button" target="_blank" aria-label="Visit us on LinkedIn (opens in new tab)"><i
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/batu1509/bodychallenge"
+            role="button" target="_blank" aria-label=""><i
               class="fab fa-github"></i></a>
         </div>
       </div>
