--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,6 +111,26 @@ body {
   font-size: 100%;
 }
 
+.last {
+  margin-bottom: 10%;
+}
+
+.exerc {
+  margin-bottom: 10%;
+}
+
+.quest {
+  margin-bottom: 10%;
+}
+
+.work {
+  margin-bottom: 21%;
+}
+
+.worki {
+  margin-bottom: 10%;
+}
+
 .home .button {
   margin-top: 20px;
   text-transform: uppercase;
@@ -137,27 +157,27 @@ body {
 
 .lele {
   margin-left:-45px;
-  padding-right: 2%;
+  padding-left: 25%;
   font-family: Georgia, 'Times New Roman', Times, serif;
-
+  color: #fff;
+  background: -webkit-gradient(linear, 40% 0%, 50% 100%, color-stop(0%, #030303), color-stop(100%, #2315a2));
+  box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
+  
 }
 
 .lelee {
   margin-left: 30px;
-  padding-left: 10%;
+  padding-left: 25%;
   font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.updateprofil {
-  margin-left: 550px;
-  padding-right: 10%;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  padding-bottom: 10rem; /*  */
-  height: 1000px;
-  
-}
+  color: #fff;
+  background: -webkit-gradient(linear, 40% 0%, 50% 100%, color-stop(0%, #030303), color-stop(100%, #2315a2));
+  box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
 
 }
+
+
+
+
 .fa-check {
   /* margin-left:-60px; */
   padding-right: 1%;
@@ -415,6 +435,7 @@ text-align: center;
 /* Workout plan table */
 table, table input {
   text-align: center;
+  
 }
 
 table input {
@@ -555,8 +576,6 @@ footer {
   max-width: 200px;
   padding: 3 4%;
            
-
-
 }
 
 .copyright {
@@ -575,7 +594,7 @@ footer {
 }
 
 #content-wrap {
-  padding-bottom: 10rem; /*  */
+  padding-bottom: 0rem; /*  */
   margin-top: 3rem;
 }
 
@@ -615,6 +634,21 @@ footer {
   }
 }
 
+.prof {
+  height: 600px;
+
+}
+
+.profl {
+  margin-bottom: -10%;
+}
 
 
+.updateprofil  {
+  margin-left: 550px;
+  padding-right: 10%;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-bottom: 10rem; /*  */
+  height: 1000px;
 
+}
