--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="py-3 container"> 
+<div class="prof py-3 container"> 
     <div class="row d-flex justify-content-center mb-8">
         <div class="text-center">
 
